--- a/hawc/apps/assessment/templates/assessment/log_detail.html
+++ b/hawc/apps/assessment/templates/assessment/log_detail.html
@@ -13,10 +13,7 @@
 
 
   <table class="table table-sm table-striped">
-    <colgroup>
-      <col style="width: 30%;">
-      <col style="width: 70%;">
-    </colgroup>
+    {% bs4_colgroup '30,70' %}
     <tbody>
 
       <tr>
