--- a/hawc/apps/epiv2/templates/epiv2/fragments/_design_table.html
+++ b/hawc/apps/epiv2/templates/epiv2/fragments/_design_table.html
@@ -1,8 +1,5 @@
 <table class="table table-sm table-striped" hx-target="this" id="design-table">
-  <colgroup>
-    <col style="width: 20%;">
-    <col style="width: 80%;">
-  </colgroup>
+  {% bs4_colgroup '20,80' %}
   <tbody>
     {% optional_table_row "Study design" object.get_study_design_display %}
     {% optional_table_row "Study population N" object.participant_n %}
