--- a/hawc/apps/common/templates/common/widgets/error.html
+++ b/hawc/apps/common/templates/common/widgets/error.html
@@ -1,1 +1,1 @@
-{% if message %}<div class="alert alert-danger"><i class="fa fa-fw fa-exclamation-triangle"></i>{{message}}</div>{% endif %}
+{% if message %}{% alert danger %}<i class="fa fa-fw fa-exclamation-triangle"></i>{{message}}{% endalert %}{% endif %}
