--- a/hawc/templates/includes/unsupported_browser.html
+++ b/hawc/templates/includes/unsupported_browser.html
@@ -1,4 +1,4 @@
-<div class="alert alert-danger">
+{% alert danger %}
   <p><b>Warning:</b> Your current browser has not been tested extensively with this website, which may result in
     some some errors with functionality. The following browsers are fully supported:</p>
   <ul>
@@ -8,4 +8,4 @@
     <li><a href="https://www.apple.com/safari/" target="_blank">Apple Safari</a></li>
   </ul>
   <p>Please use a different browser.</p>
-</div>
+{% endalert %}
