--- a/hawc/apps/animal/templates/animal/endpoint_form.html
+++ b/hawc/apps/animal/templates/animal/endpoint_form.html
@@ -4,7 +4,7 @@
   {% if animal_group.dosing_regime %}
     {% crispy form %}
   {% else %}
-    <div class="alert alert-danger" role="alert">Cannot create or modify an endpoint. The animal group has no dose regime. Please update the animal group to add a dosing regime before continuing.</div>
+    {% alert danger %}Cannot create or modify an endpoint. The animal group has no dose regime. Please update the animal group to add a dosing regime before continuing.{% endalert %}
   {% endif %}
 
   {# extra stuff that JS will move to correct location #}
