--- a/hawc/apps/bmd/templates/bmd/session_list.html
+++ b/hawc/apps/bmd/templates/bmd/session_list.html
@@ -11,10 +11,10 @@
     {% endif %}
   </div>
   {% if not assessment.bmd_settings.can_create_sessions %}
-    <div class="alert alert-warning" role="alert">
+    {% alert warning %}
       <p>{{assessment.bmd_settings.get_version_display}} is no longer supported by HAWC. Change the assessment benchmark dose settings to the
         newest BMDS version to create new sessions.</p>
-    </div>
+    {% endalert %}
   {% endif %}
   <table class='table table-sm table-striped'>
     {% bs4_thead 'Session,BMDS version,Dose units,Created,Last updated' %}
