add dev-header to full width of body instead of as a tab

--- a/hawc/templates/includes/environment_banner.html
+++ b/hawc/templates/includes/environment_banner.html
@@ -1,1 +1,12 @@
-<div class="fixed-top env-banner" style="background-color: {{ SERVER_BANNER_COLOR }}">{{ SERVER_ROLE }}</div>
+<style type="text/css">
+    body:before {
+        background-color: {{ SERVER_BANNER_COLOR }};
+        color: white;
+        content: "{{ SERVER_ROLE }}";
+        display: block;
+        font-weight: bold;
+        line-height: 20px;
+        text-align: center;
+        text-transform: uppercase;
+    }
+</style>
