--- a/hawc/apps/bmd/templates/bmd/session_list.html
+++ b/hawc/apps/bmd/templates/bmd/session_list.html
@@ -17,7 +17,7 @@
     {% endalert %}
   {% endif %}
   <table class='table table-sm table-striped'>
-    {% bs4_thead 'Session,BMDS version,Dose units,Created,Last updated' %}
+    {% bs4_thead 'Session,BMDS Version,Dose Units,Created,Last Updated' %}
     <tbody>
       {% for o in object_list %}
         <tr>
