--- a/hawc/apps/lit/templates/lit/_search_list.html
+++ b/hawc/apps/lit/templates/lit/_search_list.html
@@ -1,7 +1,7 @@
 {% if object_list %}
   <table class="table table-sm table-striped">
     {% bs4_colgroup '50,16,10,12,12' %}
-    {% bs4_thead 'Title and description,Source,References,Created,Last Updated' %}
+    {% bs4_thead 'Title,Source,References,Created,Last Updated' %}
     <tbody>
       {% for object in object_list %}
         <tr>
