remove unused show_published template option

--- a/hawc/apps/summary/templates/summary/summarytable_list.html
+++ b/hawc/apps/summary/templates/summary/summarytable_list.html
@@ -20,11 +20,7 @@
   {% if object_list.exists %}
     <table class="table table-sm table-striped">
       {% bs4_colgroup '40,20,20,20' %}
-      {% if show_published %}
-        {% bs4_thead 'Title,Table type,Published,Created,Modified' %}
-      {% else %}
-        {% bs4_thead 'Title,Table type,Created,Modified' %}
-      {% endif %}
+      {% bs4_thead 'Title,Table Type,Created,Modified' %}
       <tbody>
         {% for object in object_list %}
           <tr>
@@ -35,7 +31,6 @@
               {% debug_badge object.id %}
             </td>
             <td>{{object.get_table_type_display}}</td>
-            {% if show_published %}<td>{{object.published}}</td>{% endif %}
             <td>{{object.created|date:"Y-m-d" }}</td>
             <td>{{object.last_updated|date:"Y-m-d" }}</td>
           </tr>
