Replace <colgroup> and <thead> with bs4 tags (#1049)
* Replace <colgroup> and <thead> with bs4 tags where applicable

* replace alerts without extra css classes with bs4 tag

* fix missing tag

* remove with_experiment ;never used

* move shared template

* make title case

* remove unused show_published template option

---------

Co-authored-by: Andy Shapiro <shapiromatron@gmail.com>

--- a/hawc/apps/animal/templates/animal/_animal_group_list_tbl.html
+++ b/hawc/apps/animal/templates/animal/_animal_group_list_tbl.html
@@ -1,23 +1,9 @@
 {% if object_list %}
   <table id="ag-table" class="table table-sm table-striped">
-    <thead>
-      <tr>
-        {%if with_experiment %}
-          <th>Experiment</th>
-        {% endif %}
-        <th>Name</th>
-        <th>Species</th>
-        <th>Strain</th>
-        <th>Sex</th>
-        <th>Siblings</th>
-      </tr>
-    </thead>
+    {% bs4_thead 'Name,Species,Strain,Sex,Siblings' %}
     <tbody>
       {% for object in object_list %}
         <tr>
-          {%if with_experiment %}
-            <td><a href="{% url 'animal:animal_group_detail' object.experiment.pk %}">{{object.experiment}}</a></td>
-          {% endif %}
           <td><a href="{% url 'animal:animal_group_detail' object.pk %}">{{object}}</a></td>
           <td>{{object.species}}</td>
           <td>{{object.strain}}</td>
