--- a/hawc/apps/animal/templates/animal/dosingregime_form.html
+++ b/hawc/apps/animal/templates/animal/dosingregime_form.html
@@ -1,22 +1,8 @@
 {% extends 'assessment-rooted.html' %}
 
 {% block content %}
-
   {% crispy form %}
-
-  <div id="doseGroupsDiv">
-
-    <legend class='d-inline-block'>Dose-groups</legend>
-    <span class='float-right'>
-      <a class="btn btn-primary" id="new_dose_column" href="#">Add new representation</a>
-      <a class='btn btn-primary' href="{% url 'assessment:dose_units_create' assessment.pk %}" onclick="return window.app.HAWCUtils.newWindowPopupLink(this);" title="Add new dose-units">+</a>
-    </span>
-
-    {% if dose_groups_errors %}<div class="alert alert-danger">{{dose_groups_errors|safe}}</div>{% endif %}
-    <table id="dose_table" class="table table-sm table-striped"></table>
-    <input id="dose_groups_json" name="dose_groups_json" type="hidden" />
-  </div>
-
+  {% include 'animal/_doseGroupsDiv.html' %}
 {% endblock %}
 
 {% block extrajs %}
