--- a/hawc/apps/udf/templates/udf/udfbinding_list.html
+++ b/hawc/apps/udf/templates/udf/udfbinding_list.html
@@ -27,5 +27,8 @@
     $(document).ready(function(){
       window.app.HAWCUtils.dynamicFormListeners();
     });
+    $("#binding-list").on("htmx:afterOnLoad", function() {
+      window.app.HAWCUtils.dynamicFormListeners();
+    });
   </script>
 {% endblock %}
