--- a/hawc/apps/animalv2/templates/animalv2/fragments/_experiment_table.html
+++ b/hawc/apps/animalv2/templates/animalv2/fragments/_experiment_table.html
@@ -8,12 +8,6 @@
     {% optional_table_row "Design" object.get_design_display %}
     {% optional_table_row "Multiple generations" object.get_has_multiple_generations_display %}
     {% optional_table_row "Guideline compliance" object.guideline_compliance %}
-
-    {% if object.comments|hastext %}
-      <tr>
-        <th>Comments</th>
-        <td>{{object.comments|safe}}</td>
-      </tr>
-    {% endif %}
+    {% optional_table_row "Comments" object.comments %}
   </tbody>
 </table>
