--- a/hawc/apps/animalv2/templates/animalv2/fragments/_experiment_table.html
+++ b/hawc/apps/animalv2/templates/animalv2/fragments/_experiment_table.html
@@ -1,8 +1,5 @@
 <table class="table table-sm table-striped" hx-target="this" id="experiment-table">
-  <colgroup>
-    <col style="width: 20%;">
-    <col style="width: 80%;">
-  </colgroup>
+  {% bs4_colgroup '20,80' %}
   <tbody>
     {% optional_table_row "Experiment name" object.name %}
     {% optional_table_row "Design" object.get_design_display %}
