fix: refactor vocab additions

--- a/hawc/apps/vocab/templates/vocab/toxref_browse.html
+++ b/hawc/apps/vocab/templates/vocab/toxref_browse.html
@@ -1,7 +1,7 @@
 {% extends 'crumbless.html' %}
 
 {% block content %}
-  <a class="pull-right btn btn-primary" href="{% url 'vocab:api:ehv-nested' %}?format=xlsx">Download</a>
+  <a class="pull-right btn btn-primary" href="{% url 'vocab:api:toxref-nested' %}?format=xlsx">Download</a>
   <h2>ToxRef Database Vocabulary</h2>
   <div>
     <p>
