change v2_timepoints from prop to method and switch to standard Django get approach

--- a/hawc/apps/animalv2/templates/animalv2/experiment_detail.html
+++ b/hawc/apps/animalv2/templates/animalv2/experiment_detail.html
@@ -88,7 +88,7 @@
         {% bs4_colgroup '40,30,30' %}
         {% bs4_thead 'Endpoint,Time,Units' %}
         <tbody>
-          {% for object in object.v2_timepoints %}
+          {% for object in object.get_v2_timepoints %}
             {% include "animalv2/fragments/_observationtime_row.html" %}
           {% empty %}
             {% bs4_fullrow 'No timepoints available.' %}
