--- a/hawc/apps/assessment/templates/assessment/fragments/downloads_select.html
+++ b/hawc/apps/assessment/templates/assessment/fragments/downloads_select.html
@@ -1,22 +1,33 @@
-<div class="input-group my-2" style="width: fit-content;" role="group" aria-label="Downlink link button group with format select">
-  <div class="input-group-prepend">
-    <a class="btn btn-primary" style="line-height: 1.5rem;" type="button" id="{{name}}-url" href="{{link}}?format={{format}}{% if allow_unpublished %}&unpublished=false{% endif %}"><i class="fa fa-download" aria-hidden="true"></i>&nbsp;{{button_text}}</a>
+<div class="list-group-item d-flex p-0 flex-wrap">
+  <div class="col-md-2 bg-light font-weight-normal align-content-center text-center">
+    {{text}}
   </div>
-  <select id="{{name}}" class="custom-select" required>
-    <option selected value="xlsx">xlsx</option>
-    <option value="csv">csv</option>
-    <option value="tsv">tsv</option>
-    <option value="json">json</option>
-    <option value="html">html</option>
-  </select>
+  <div class="col-md-10 py-2">
+    <div class="d-flex align-items-center flex-wrap flex-md-nowrap">
+      <div class="input-group input-group-sm flex-shrink-0 px-2" style="width: fit-content;" role="group" aria-label="Downlink link button group with format select">
+        <div class="input-group-prepend">
+          <a class="btn btn-primary" type="button" id="{{name}}-url" href="{{link}}?format={{format}}{% if allow_unpublished %}&unpublished=false{% endif %}"><i class="fa fa-download" aria-hidden="true"></i>&nbsp;Download</a>
+        </div>
+        <select id="{{name}}" class="custom-select" required>
+          <option selected value="xlsx">xlsx</option>
+          <option value="csv">csv</option>
+          <option value="tsv">tsv</option>
+          <option value="json">json</option>
+          <option value="html">html</option>
+        </select>
+        {% if allow_unpublished %}
+          <div class="input-group-append">
+            <div class="input-group-text">
+              <input id="{{name}}-checkbox" class="form-check-input unpublished-checkbox mx-0" type="checkbox" data-url="{{name}}-url">
+              <label class="form-check-label pl-3" for="{{name}}-checkbox">
+                Include Unpublished Data
+              </label>
+            </div>
+
+          </div>
+        {% endif %}
+      </div>
+      <p class="text-muted my-0 small">{{help_text}}</p>
+    </div>
+  </div>
 </div>
-{% if allow_unpublished %}
-  <div class="form-check">
-    <input id="{{name}}-checkbox" class="form-check-input unpublished-checkbox" type="checkbox" data-url="{{name}}-url">
-    <label class="form-check-label" for="{{name}}-checkbox">
-      Include unpublished data
-    </label>
-  </div>
-{% endif %}
-<p class="text-muted">{{help_text}}</p>
-<p><small><i class="text-muted" id="{{name}}-fmt-text">Excel Spreadsheet</i></small></p>
