--- a/hawc/apps/assessment/templates/assessment/fragments/assessment_list_public.html
+++ b/hawc/apps/assessment/templates/assessment/fragments/assessment_list_public.html
@@ -19,5 +19,7 @@
     </tbody>
   </table>
 {% else %}
-  {% alert info %}No assessments found.{% endalert %}
+  {% alert "type=info" %}
+  No assessments found.
+  {% endalert %}
 {% endif %}
