--- a/hawc/apps/assessment/templates/assessment/fragments/assessment_list_team.html
+++ b/hawc/apps/assessment/templates/assessment/fragments/assessment_list_team.html
@@ -20,5 +20,5 @@
     </tbody>
   </table>
 {% else %}
-  {% alert info %}No assessments found.{% endalert %}
+{% alert type="info" text="No assessments found." %}
 {% endif %}
