--- a/hawc/apps/lit/templates/lit/ris_export_instructions.html
+++ b/hawc/apps/lit/templates/lit/ris_export_instructions.html
@@ -13,7 +13,7 @@
 
     <p>While HAWC can import any RIS export, additional information can be added into HAWC by structuring the RIS export in a custom format. It is recommended to do so; this will allow for hyperlinks in HAWC to be added to reference databases for access to the original reference, or the database it was found from. </p>
 
-    {% alert warning %}
+    {% alert "type=warning" %}
       <p><strong>Caution:</strong> Currently there is no mechanism for de-duplication of reference in HAWC. This is important in two way for RIS imports: <br>
         1. Ensure that your EndNote library has been de-duplicated prior to import into HAWC. <br>
         2. Ensure that if you are uploading multiple RIS files into HAWC under one assessment, there is no intersection of references across libraries.</p>
