--- a/hawc/apps/common/templates/common/widgets/error.html
+++ b/hawc/apps/common/templates/common/widgets/error.html
@@ -1,1 +1,1 @@
-{% if message %}{% alert danger %}<i class="fa fa-fw fa-exclamation-triangle"></i>{{message}}{% endalert %}{% endif %}
+{% if message %}{% alert "type=danger" %}<i class="fa fa-fw fa-exclamation-triangle"></i>{{message}}{% endalert %}{% endif %}
