--- a/hawc/apps/lit/templates/lit/overview.html
+++ b/hawc/apps/lit/templates/lit/overview.html
@@ -209,11 +209,10 @@
   </div>
 
   {% if obj_perms.edit and overview.conflicts %}
-    <div class="alert alert-danger mt-3">
-      <button type="button" class="close" data-dismiss="alert">&times;</button>
-      <b>References have tag conflicts!</b><br>
-      <p class="m-0">{{ overview.conflicts }} reference{{ overview.conflicts|pluralize }} {{ overview.conflicts|pluralize:"is,are" }} ready for conflict resolution. <a href="{% url 'lit:tag-conflicts' assessment.pk %}">Resolve tag conflicts</a></p>
-    </div>
+    {% alert "type=danger" "classes=mt-3" "dismiss=True" %}
+    <b>References have tag conflicts!</b><br>
+    <p class="m-0">{{ overview.conflicts }} reference{{ overview.conflicts|pluralize }} {{ overview.conflicts|pluralize:"is,are" }} ready for conflict resolution. <a href="{% url 'lit:tag-conflicts' assessment.pk %}">Resolve tag conflicts</a></p>
+    {% endalert %}
   {% endif %}
 
   {% if assessment.enable_data_extraction and need_import_count > 0 %}
