fix existing alert tags

--- a/hawc/apps/assessment/templates/assessment/fragments/assessment_list_team.html
+++ b/hawc/apps/assessment/templates/assessment/fragments/assessment_list_team.html
@@ -20,5 +20,7 @@
     </tbody>
   </table>
 {% else %}
-{% alert type="info" text="No assessments found." %}
+{% alert "type=info" %}
+No assessments found.
+{% endalert %}
 {% endif %}
