--- a/hawc/apps/lit/templates/lit/components/bulk_merge_modal.html
+++ b/hawc/apps/lit/templates/lit/components/bulk_merge_modal.html
@@ -12,7 +12,7 @@
         </button>
       </div>
       <div class="modal-body">
-        <div class="alert alert-warning my-2 mx-5">Loading... <i class="fa fa-spinner fa-spin"></i></div>
+        {% alert "type=warning" "classes=my-2 mx-5" %}Loading... <i class="fa fa-spinner fa-spin"></i>{% endalert %}
       </div>
     </div>
   </form>
