--- a/hawc/apps/lit/templates/lit/reference_extract_list.html
+++ b/hawc/apps/lit/templates/lit/reference_extract_list.html
@@ -52,8 +52,7 @@
       </div>
     </form>
   {% else %}
-    {% alert "type=success" %}
-      <button type="button" class="close" data-dismiss="alert">&times;</button>
+    {% alert "type=success" "dismiss=True" %}
       <b>Nothing to be done!</b><br/>
       <p>No references have been marked for inclusion which aren't studies already.</p>
     {% endalert %}
